// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should accept style prop 1`] = `
.emotion-1:empty {
  display: none;
}

.emotion-2 {
  display: grid;
  grid-auto-flow: row;
  grid-auto-columns: minmax(0,1fr);
  grid-auto-rows: minmax(min-content,max-content);
  gap: 0.5rem;
  justify-items: stretch;
}

.emotion-0 {
  font-family: "IBM Plex Sans",sans-serif;
  font-size: 0.8125rem;
  line-height: 1.5;
  color: #24252E;
  color: #0069D0;
  font-weight: bold;
  -webkit-transition: all .4s ease;
  transition: all .4s ease;
}

.emotion-3 {
  color: red;
}

<div>
  <span
    class="emotion-3"
  >
    <div
      class="emotion-2"
    >
      <div
        class="emotion-1"
      >
        <span
          class="emotion-0"
        >
          Step label
        </span>
      </div>
    </div>
  </span>
</div>
`;

exports[`should render correctly 1`] = `
.emotion-1:empty {
  display: none;
}

.emotion-2 {
  display: grid;
  grid-auto-flow: row;
  grid-auto-columns: minmax(0,1fr);
  grid-auto-rows: minmax(min-content,max-content);
  gap: 0.5rem;
  justify-items: stretch;
}

.emotion-0 {
  font-family: "IBM Plex Sans",sans-serif;
  font-size: 0.8125rem;
  line-height: 1.5;
  color: #24252E;
  color: #0069D0;
  font-weight: bold;
  -webkit-transition: all .4s ease;
  transition: all .4s ease;
}

<div>
  <span
    class="emotion-3"
  >
    <div
      class="emotion-2"
    >
      <div
        class="emotion-1"
      >
        <span
          class="emotion-0"
        >
          Step label
        </span>
      </div>
    </div>
  </span>
</div>
`;
